tests/lean/fail/failed_lemma.lean
lemma wrong : False := by tactic.failed
